bug: Fix toolbar title overflow issue

--- a/src/components/toolbar/toolbar.component.scss
+++ b/src/components/toolbar/toolbar.component.scss
@@ -21,8 +21,12 @@ $toolbar-color: $color-white;
   padding: 0 20px !important;
 
   .ngx-toolbar-title {
-    margin:0;
+    margin: 0;
     font-weight: 500;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    white-space: nowrap;
 
     small {
      color: $color-text-med;
